QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog


0.3.13  2015-03-25  Pre-LAC2015 release frenzy.

- Added application description as freedesktop.org's AppData.

- Setup dialog form is now modeless.

- Introducing brand new active patchbay reset/disconnect-all
  user preference option.

- Current highlighted client/port connections are now drawn
  with thicker connector lines.

- New user preference option on whether to show the nagging
  'program will keep running in the system tray' message, on
  main window close.

- Connections lines now drawn with anti-aliasing; connections
  splitter handles width is now reduced.

- Drop missing or non-existent patchbay definition files from
  the most recent used list.


0.3.12  2014-10-19  JACK Pretty-names aliasing.

- JACK client/port pretty-name (metadata) support is being
  introduced and seamlessly integrated with old Connections
  client/port aliases editing (rename) (refactored from an
  original patch by Paul Davis, thanks). (EXPERIMENTAL)

- Application close confirm warning is now raising the main
  window as visible and active for due top level display,
  especially applicable when minimized to the system tray.

- Messages standard output capture has been slightly improved
  as for non-blocking i/o, whenever available.

- Translations install directory change.

- Allow the build system to include an user specified LDFLAGS.

- Missing input/output-latency parameter settings now settled
  for the D-BUS controlled JACK server and firewire back-end
  driver.


0.3.11  2013-12-31  A fifth of a Jubilee.

- More preparations for Qt5 configure build.

- Interface device selection is now unified, by moving the old 
  '>' pop-up menu into the customized combo-box drop-down list
  showing all available card/device names and descriptions (on
  a patch by Arnout Engelen, thanks).

- Added include <unistd.h> to shut up gcc 4.7 build failures